<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!-- WARNING: Eclipse auto-generated file.
              Any modifications will be overwritten.
              To include a user specific buildfile here, simply create one in the same
              directory with the processing instruction <?eclipse.ant.import?>
              as the first entry and export the buildfile again. --><project basedir="." default="build" name="Univ_Scheduler">
    <property environment="env"/>
    <property name="debuglevel" value="source,lines,vars"/>
    <property name="target" value="21"/>
    <property name="source" value="21"/>
    <path id="Univ_Scheduler.classpath">
        <pathelement location="bin"/>
        <pathelement location="../../../OneDrive/NOGAYE/SEMESTRE 3/hadji moussa/semestre 4/POO/setup java/mysql-connector-java-8.0.28/mysql-connector-java-8.0.28/mysql-connector-java-8.0.28.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx.base.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx.controls.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx.fxml.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx.graphics.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx.media.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx.swing.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx.web.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx-swt.jar"/>
        <pathelement location="../../../Downloads/itextpdf-5.5.13.3 (1).jar"/>
    </path>
    <path id="run.LoginView.classpath">
        <path refid="Univ_Scheduler.classpath"/>
        <pathelement location="../../../OneDrive/NOGAYE/SEMESTRE 3/hadji moussa/semestre 4/POO/setup java/mysql-connector-java-8.0.28/mysql-connector-java-8.0.28/mysql-connector-java-8.0.28.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx.base.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx.controls.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx.fxml.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx.graphics.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx.media.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx.swing.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx.web.jar"/>
        <pathelement location="../../../Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10/lib/javafx-swt.jar"/>
        <pathelement location="../../../Downloads/itextpdf-5.5.13.3 (1).jar"/>
    </path>
    <target name="init">
        <mkdir dir="bin"/>
        <copy includeemptydirs="false" todir="bin">
            <fileset dir="src">
                <exclude name="**/*.launch"/>
                <exclude name="**/*.java"/>
            </fileset>
        </copy>
    </target>
    <target name="clean">
        <delete dir="bin"/>
    </target>
    <target depends="clean" name="cleanall"/>
    <target depends="build-subprojects,build-project" name="build"/>
    <target name="build-subprojects"/>
    <target depends="init" name="build-project">
        <echo message="${ant.project.name}: ${ant.file}"/>
        <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
            <src path="src"/>
            <classpath refid="Univ_Scheduler.classpath"/>
        </javac>
    </target>
    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
        <copy todir="${ant.library.dir}">
            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
        </copy>
        <unzip dest="${ant.library.dir}">
            <patternset includes="jdtCompilerAdapter.jar"/>
            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
        </unzip>
    </target>
    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
        <antcall target="build"/>
    </target>
    <target name="LoginView">
        <java classname="com.univscheduler.view.LoginView" failonerror="true" fork="yes">
            <jvmarg line="--module-path &quot;C:\Users\NOGAYE\.m2\repository\org\openjfx\javafx-controls\21.0.6;C:\Users\NOGAYE\.m2\repository\org\openjfx\javafx-base\21.0.6;C:\Users\NOGAYE\.m2\repository\org\openjfx\javafx-graphics\21.0.6;C:\Users\NOGAYE\.m2\repository\org\openjfx\javafx-fxml\21.0.6&quot; --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base"/>
            <classpath refid="run.LoginView.classpath"/>
        </java>
    </target>
</project>
